tests/invalid/no_semicolon_binary_expression.c
int main() {
    return 2*2
}
// ERROR: Line 3, Error 2003